--- a/affinity/affinity.yaml
+++ b/affinity/affinity.yaml
@@ -1,18 +1,28 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: affinity-pod
+  name: affinity-deployment
+  labels:
+    app: affinity
 spec:
-  affinity:
-    podAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-      - labelSelector:
-          matchExpressions:
-          - key: security
-            operator: In
-            values:
-            - S1
-        topologyKey: kubernetes.io/hostname
-  containers:
-  - name: affinity-pod
-    image: docker.io/papatzis1978/test
+  replicas: 3
+  selector:
+    matchLabels:
+      app: affinity
+  template:
+    metadata:
+      name: affinity-pod
+    spec:
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchExpressions:
+              - key: security
+                operator: In
+                values:
+                - S1
+            topologyKey: kubernetes.io/hostname
+      containers:
+      - name: affinity-pod
+        image: docker.io/papatzis1978/test
