--- a/affinity/affinity.yaml
+++ b/affinity/affinity.yaml
@@ -12,6 +12,8 @@ spec:
   template:
     metadata:
       name: affinity-pod
+      labels:
+        app: affinity-pod
     spec:
       affinity:
         podAffinity:
