--- a/affinity/affinity.yaml
+++ b/affinity/affinity.yaml
@@ -7,13 +7,14 @@ metadata:
 spec:
   replicas: 3
   selector:
+    #matchLabels must match template labels  
     matchLabels:
       app: affinity-pod
   template:
     metadata:
       name: affinity-pod
       labels:
-        app: affinity-pod1
+        app: affinity-pod
     spec:
       affinity:
         podAffinity:
